[project]
name = "gripper"
version = "5.0.0"
description = "Render local readme files with mermaid diagram support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
grip = "grip:main"
gripper = "grip:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "flake8>=7",
    "pyright>=1.1.408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["grip"]

[tool.hatch.build.targets.wheel.force-include]
"grip/static" = "grip/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["venv", "site-packages", ".research", ".venv"]
markers = [
    "assumption: mark a test as an external assumption.",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.flake8]
exclude = [".git", "__pycache__", ".research"]
