[project]
name = "markdraft"
version = "5.0.0"
description = "Preview local markdown files with mermaid diagram support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
draft = "markdraft:main"
mdraft = "markdraft:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "flake8>=7",
    "pyright>=1.1.408",
    "black>=26.3.1",
    "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markdraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
norecursedirs = ["venv", "site-packages", ".research", ".venv"]
markers = [
    "assumption: mark a test as an external assumption.",
]

[tool.black]
target-version = ["py310"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.flake8]
exclude = [".git", "__pycache__", ".research"]
